# progiter

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  README.md  README.rst  appveyor.yml  pyproject.toml  requirements.txt  run_doctests.sh  run_linter.sh  run_tests.py  setup.py  test_progiter.py  whatsnew.txt
.circleci/: config.yml
.github/workflows/: tests.yml
dev/: bench_check.py  ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  travis_public_gpg_key.pgp.enc  travis_secret_gpg_key.pgp.enc
dev/benchmarks/: bench_check.py  benchmark2.py
dev/devcheck/: devcheck_tqdm.py  mwe_21.py
dev/maintain/: record_animation_demo.sh  record_manager_demo.sh
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  progiter.progiter.rst  progiter.rst
progiter/: __init__.py  manager.py  manager.pyi  progiter.py  progiter.pyi
requirements/: optional.txt  tests.txt
tests/: benchmark.py  test_import.py  test_manager.py  test_progiter.py
